2001-07-13  Marcus Brinkmann  <marcus@gnu.org>

	* host.c (S_proc_getexecdata): New variable PORTS_ALLOCATED.
	Set it if we allocated a new buffer for PORTS.  If it is set,
	and allocation of a new buffer for INTS fails, unmap the buffer
	for PORTS.

	* host.c (S_proc_getexecdata): New variable I.  Go over all
	standard ports and increase the send right user reference by one.
	Set *PORTSPOLY to MACH_MSG_TYPE_MOVE_SEND.

2001-06-27  Marcus Brinkmann  <marcus@gnu.org>

	* info.c (S_proc_getprocinfo): If we return because mmap failed
	for *PIARRAY, be sure to munmap THDS if necessary.

2001-05-12  Marcus Brinkmann  <marcus@gnu.org>

	* host.c (initialize_version_info): Clear last byte of KV to make
	sure that the string is null-terminated.

2000-04-03  Neal H Walfield  <neal@cs.uml.edu>

	* proc.h (struct ids): Drop gids and ngids, we never use
	them.  Turn uids into a zero length array.
	* mgt.c (make_ids): Conform to new semantics.
	(ids_free): Removed.  Rendered obsolete by ids_rele.
	(ids_rele): New function.  Drop a reference to the given
	ids.
	(ids_ref): Add a reference to the given ids.
	(S_proc_reauthenticate): Use ids_rele and new make_ids
	semantics.
	(S_proc_child): Use ids_rele and ids_ref.
	(create_startup_proc): Conform to new make_ids semantics.
	(complete_proc): Use ids_ref.
	(process_has_exited): Use ids_rele.

	* host.c: Doc fix: ``Implement foo as described in <hurd/proc.defs>''
	=> ``Implement foo as described in <hurd/process.defs>''
	* info.c: Likewise.
	* mgt.c: Likewise.
	* pgrp.c: Likewise.
	* wait.c: Likewise.

	* mgt.c (S_proc_reauthenticate): Calculate the value of
	NGEN_UIDS, NAUX_UIDS, NGEN_GIDS AND NAUX_GIDS; do not use
	a constant.
	(create_startup_proc): Add asserts.

	* host.c (S_proc_setexecdata):  Check for memory allocation errors.
	Use memcpy, not bcopy.
	(S_proc_getexecdata): Likewise.
	(S_proc_execdata_notify): Check return of malloc.
	(S_proc_register_version): Likewise.
	(initialize_version_info): Add asserts.